extends CharacterBody2D

enum State { IDLE, CHASE, ATTACK, HURT, DEATH }

@export var max_health: float = 250.0
@export var move_speed: float = 150.0
@export var attack_damage: float = 25.0
@export var attack_range: float = 80.0  # –£–≤–µ–ª–∏—á–∏–ª –∞—Ç–∞–∫—É –±–æ—Å—Å–∞
@export var detection_range: float = 2300.0
@export var player_detection_range: float = 300.0  # –£–≤–µ–ª–∏—á–∏–ª –∑–æ–Ω—É –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏—è –∏–≥—Ä–æ–∫–∞
@export var attack_cooldown: float = 1.5  # –ù–µ–º–Ω–æ–≥–æ –±–æ–ª—å—à–µ –∫–¥ –¥–ª—è –±–∞–ª–∞–Ω—Å–∞
@export var gravity: float = 800.0
@export var health_bar_path: NodePath = "HealthBar"
@export var item_drop_scene: PackedScene
@export var item_drop_chance: float = 0.3  # 30% –¥–ª—è –±–æ—Å—Å–∞
@export var crystal_drop_scene: PackedScene
@export var crystal_drop_chance: float = 0.4  # 40% –¥–ª—è –±–æ—Å—Å–∞
@export var enemy_id: String = "boss_enemy_"

var current_health: float
var state: State = State.IDLE
var player: Node2D
var cheese: Node2D
var can_attack: bool = true
var is_attacking: bool = false
var my_unique_id: String = ""
var target: Node2D = null
var original_target: Node2D = null
var is_distracted_by_player: bool = false
var distraction_cooldown: float = 0.0
var is_dying: bool = false

@onready var anim_player: AnimationPlayer = $AnimationPlayer
@onready var sprite: AnimatedSprite2D = $AnimatedSprite2D
@onready var attack_range_area: Area2D = $AttackRange
@onready var hit_box: Area2D = $HitBox
@onready var health_bar: TextureProgressBar = null
@onready var player_detection_area: Area2D = $PlayerDetectionArea
@onready var collision_shape: CollisionShape2D = $CollisionShape2D
@onready var save_system = get_node_or_null("/root/save_system")

func _ready():
	print("üëë –ë–û–°–° —Å–æ–∑–¥–∞–Ω! HP:", max_health)
	
	# –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º —É–Ω–∏–∫–∞–ª—å–Ω—ã–π ID
	my_unique_id = enemy_id + "_" + str(int(global_position.x)) + "_" + str(int(global_position.y)) + "_" + str(Time.get_ticks_msec())
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ —É–±–∏—Ç –ª–∏ —É–∂–µ –≤—Ä–∞–≥
	if save_system and save_system.is_enemy_killed(my_unique_id):
		print("üëë –ë–æ—Å—Å —É–∂–µ —É–±–∏—Ç, —É–¥–∞–ª—è–µ–º: ", my_unique_id)
		queue_free()
		return
	
	current_health = max_health
	

	
	# –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º health bar
	if health_bar_path and has_node(health_bar_path):
		health_bar = get_node(health_bar_path)
		health_bar.max_value = max_health
		health_bar.value = current_health
	
	# –î–æ–±–∞–≤–ª—è–µ–º –≤ –≥—Ä—É–ø–ø—ã
	add_to_group("enemies")  # –í–∞–∂–Ω–æ –¥–ª—è WaveManager!
	add_to_group("boss")
	
	# –£–≤–µ–ª–∏—á–∏–≤–∞–µ–º –ø–∞—Ä–∞–º–µ—Ç—Ä—ã –¥–ª—è –±–æ—Å—Å–∞
	max_health *= 2.0  # –í 2 —Ä–∞–∑–∞ –±–æ–ª—å—à–µ HP
	attack_damage *= 1.5  # –í 1.5 —Ä–∞–∑–∞ –±–æ–ª—å—à–µ —É—Ä–æ–Ω–∞
	current_health = max_health
	attack_range = 100.0  # –ë–æ–ª—å—à–∞—è –∑–æ–Ω–∞ –∞—Ç–∞–∫–∏
	player_detection_range = 350.0  # –ë–æ–ª—å—à–∞—è –∑–æ–Ω–∞ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏—è
	
	# –ù–∞—Ö–æ–¥–∏–º —Ü–µ–ª–∏
	call_deferred("_find_initial_targets")
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª—ã
	attack_range_area.body_entered.connect(_on_attack_range_body_entered)
	attack_range_area.body_exited.connect(_on_attack_range_body_exited)
	hit_box.area_entered.connect(_on_hit_box_area_entered)
	
	if player_detection_area:
		player_detection_area.body_entered.connect(_on_player_detection_area_body_entered)
		player_detection_area.body_exited.connect(_on_player_detection_area_body_exited)
	
	play_random_idle()
	
	print("üëë –ì–ò–ì–ê–ù–¢–°–ö–ò–ô –ë–û–°–° —Å–æ–∑–¥–∞–Ω!")
	print("  HP:", max_health)
	print("  –£—Ä–æ–Ω:", attack_damage)
	print("  –ú–∞—Å—à—Ç–∞–±:", sprite.scale if sprite else "–Ω–µ—Ç —Å–ø—Ä–∞–π—Ç–∞")

func _find_initial_targets():
	# –ò—â–µ–º —Ü–µ–ª–∏ –ø–æ –≥—Ä—É–ø–ø–∞–º
	player = get_tree().get_first_node_in_group("players")
	cheese = get_tree().get_first_node_in_group("great_cheese")
	
	print("üîç –ë–æ—Å—Å –∏—â–µ—Ç –Ω–∞—á–∞–ª—å–Ω—ã–µ —Ü–µ–ª–∏:")
	print("   –ò–≥—Ä–æ–∫ (players):", player != null)
	print("   –°—ã—Ä (great_cheese):", cheese != null)
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –ø—Ä–∏–æ—Ä–∏—Ç–µ—Ç: —Å—ã—Ä > –∏–≥—Ä–æ–∫
	if cheese and is_instance_valid(cheese):
		original_target = cheese
		target = cheese
		print("üéØ –ü–µ—Ä–≤–æ–Ω–∞—á–∞–ª—å–Ω–∞—è —Ü–µ–ª—å: –°—ã—Ä")
	elif player and is_instance_valid(player):
		original_target = player
		target = player
		print("üéØ –ü–µ—Ä–≤–æ–Ω–∞—á–∞–ª—å–Ω–∞—è —Ü–µ–ª—å: –ò–≥—Ä–æ–∫ (—Å—ã—Ä –Ω–µ –Ω–∞–π–¥–µ–Ω)")
	else:
		print("‚ö†Ô∏è –ù–∏—á–µ–≥–æ –Ω–µ –Ω–∞–π–¥–µ–Ω–æ!")
		state = State.IDLE

func scale_stats(hp_multiplier: float, damage_multiplier: float):
	max_health *= hp_multiplier
	current_health = max_health
	attack_damage *= damage_multiplier
	
	if health_bar:
		health_bar.max_value = max_health
		health_bar.value = current_health
	
	print("üëë –ë–æ—Å—Å —É—Å–∏–ª–µ–Ω: HP=", max_health, " DMG=", attack_damage)

func _physics_process(delta):
	if state == State.DEATH or is_dying:
		return

	# –ü—Ä–∏–º–µ–Ω—è–µ–º –≥—Ä–∞–≤–∏—Ç–∞—Ü–∏—é
	if not is_on_floor():
		velocity.y += gravity * delta
	else:
		velocity.y = 0

	# –û–±–Ω–æ–≤–ª—è–µ–º –∫—É–ª–¥–∞—É–Ω –æ—Ç–≤–ª–µ—á–µ–Ω–∏—è
	if distraction_cooldown > 0:
		distraction_cooldown -= delta
		if distraction_cooldown <= 0 and is_distracted_by_player:
			_return_to_original_target()

	# –ï—Å–ª–∏ –Ω–µ—Ç —Ü–µ–ª–∏ –∏–ª–∏ —Ü–µ–ª—å –Ω–µ–≤–∞–ª–∏–¥–Ω–∞ - –æ–±–Ω–æ–≤–ª—è–µ–º —Ü–µ–ª—å
	if not target or not is_instance_valid(target):
		_update_target()
		if not target:
			state = State.IDLE
			velocity.x = 0
			if anim_player.current_animation != "Idle":
				anim_player.play("Idle")
			move_and_slide()
			return

	# –ù–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–µ —Å–ø—Ä–∞–π—Ç–∞
	if target:
		sprite.flip_h = target.global_position.x < global_position.x
	
	# –î–∏—Å—Ç–∞–Ω—Ü–∏—è –¥–æ —Ç–µ–∫—É—â–µ–π —Ü–µ–ª–∏
	var distance_to_target = global_position.distance_to(target.global_position) if target else INF
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –µ—Å—Ç—å –ª–∏ –∏–≥—Ä–æ–∫ —Ä—è–¥–æ–º –¥–ª—è –æ—Ç–≤–ª–µ—á–µ–Ω–∏—è
	if not is_distracted_by_player and player and is_instance_valid(player):
		var distance_to_player = global_position.distance_to(player.global_position)
		if distance_to_player <= player_detection_range:
			print("üéØ –ë–æ—Å—Å: –ò–≥—Ä–æ–∫ —Ä—è–¥–æ–º! –û—Ç–≤–ª–µ–∫–∞—é—Å—å –Ω–∞ –Ω–µ–≥–æ")
			target = player
			is_distracted_by_player = true
			distraction_cooldown = 10.0
			state = State.CHASE
	
	if state != State.ATTACK and state != State.HURT:
		if distance_to_target <= attack_range:
			state = State.ATTACK
		elif distance_to_target <= detection_range:
			state = State.CHASE
		else:
			state = State.IDLE

	match state:
		State.IDLE:
			anim_player.play("Idle")
			velocity.x = 0
		State.CHASE:
			state_chase(delta)
		State.ATTACK:
			state_attack()
		State.HURT:
			pass

	move_and_slide()

func _return_to_original_target():
	if original_target and is_instance_valid(original_target):
		print("üéØ –ë–æ—Å—Å: –í–æ–∑–≤—Ä–∞—â–∞—é—Å—å –∫ –æ—Ä–∏–≥–∏–Ω–∞–ª—å–Ω–æ–π —Ü–µ–ª–∏:", original_target.name)
		target = original_target
		is_distracted_by_player = false
		distraction_cooldown = 0

func _update_target():
	# –ï—Å–ª–∏ –æ—Ç–≤–ª–µ—á–µ–Ω—ã –Ω–∞ –∏–≥—Ä–æ–∫–∞, –ø—Ä–æ–≤–µ—Ä—è–µ–º –µ–≥–æ –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç—å
	if is_distracted_by_player:
		if player and is_instance_valid(player):
			# –ü—Ä–æ–≤–µ—Ä—è–µ–º –∑–¥–æ—Ä–æ–≤—å–µ –∏–≥—Ä–æ–∫–∞
			if player.has_method("get_current_health") and player.get_current_health() <= 0:
				_return_to_original_target()
			else:
				target = player
		else:
			_return_to_original_target()
	else:
		# –ü—Ä–æ–≤–µ—Ä—è–µ–º –æ—Ä–∏–≥–∏–Ω–∞–ª—å–Ω—É—é —Ü–µ–ª—å
		if original_target and not is_instance_valid(original_target):
			# –ï—Å–ª–∏ —Å—ã—Ä —É–Ω–∏—á—Ç–æ–∂–µ–Ω, –∞—Ç–∞–∫—É–µ–º –∏–≥—Ä–æ–∫–∞
			if original_target == cheese and player and is_instance_valid(player):
				print("üßÄ –ë–æ—Å—Å: –°—ã—Ä —É–Ω–∏—á—Ç–æ–∂–µ–Ω, –ø–µ—Ä–µ–∫–ª—é—á–∞—é—Å—å –Ω–∞ –∏–≥—Ä–æ–∫–∞")
				original_target = player
				target = player
			elif original_target == player and cheese and is_instance_valid(cheese):
				print("üíÄ –ë–æ—Å—Å: –ò–≥—Ä–æ–∫ —É–º–µ—Ä, –ø–µ—Ä–µ–∫–ª—é—á–∞—é—Å—å –Ω–∞ —Å—ã—Ä")
				original_target = cheese
				target = cheese
			else:
				print("‚ö†Ô∏è –ë–æ—Å—Å: –ù–µ—Ç —Ü–µ–ª–µ–π!")
				target = null

func state_chase(delta):
	if not target or not is_instance_valid(target):
		state = State.IDLE
		return
	
	var dir = (target.global_position - global_position).normalized()
	velocity.x = dir.x * move_speed
	
	if anim_player.current_animation != "Run":
		anim_player.play("Run")
	
	# –ï—Å–ª–∏ –¥–æ–≥–Ω–∞–ª–∏ - –∞—Ç–∞–∫–∞
	var distance = global_position.distance_to(target.global_position)
	if distance <= attack_range:
		state = State.ATTACK

func state_attack():
	if not target or not is_instance_valid(target):
		state = State.IDLE
		return
	
	if can_attack and not is_attacking and target_in_attack_range():
		perform_attack()
	elif not target_in_attack_range():
		state = State.CHASE

func perform_attack():
	can_attack = false
	is_attacking = true
	velocity.x = 0
	anim_player.play("Attack")

	await get_tree().create_timer(0.3).timeout
	apply_attack_damage_to_target()

	await anim_player.animation_finished
	is_attacking = false
	await get_tree().create_timer(attack_cooldown).timeout
	can_attack = true

func apply_attack_damage_to_target():
	if not target or not is_instance_valid(target):
		return
	
	print("üëë –ë–æ—Å—Å –∞—Ç–∞–∫—É–µ—Ç:", target.name)
	
	if target.is_in_group("great_cheese") and target.has_method("take_damage"):
		target.take_damage(attack_damage)
	elif target.is_in_group("players") and target.has_method("take_damage"):
		target.take_damage(attack_damage)

func target_in_attack_range() -> bool:
	if not target or not is_instance_valid(target):
		return false
	return global_position.distance_to(target.global_position) <= attack_range

func _on_hit_box_area_entered(area):
	print("üëë –ë–æ—Å—Å –ø–æ–ª—É—á–∞–µ—Ç —É–¥–∞—Ä –æ—Ç:", area.name)
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º —á—Ç–æ —ç—Ç–æ –∞—Ç–∞–∫–∞ –∏–≥—Ä–æ–∫–∞
	if area.is_in_group("player_attack") or area.is_in_group("player_hitbox"):
		var dmg = 20.0
		if area.has_meta("damage"):
			dmg = float(area.get_meta("damage"))
		print("üëë –ë–æ—Å—Å –ø–æ–ª—É—á–∞–µ—Ç —É—Ä–æ–Ω:", dmg)
		take_damage(dmg)
	elif area.is_in_group("enemy_attack"):
		print("üëë –ë–æ—Å—Å –ø–æ–ª—É—á–∞–µ—Ç —É–¥–∞—Ä –æ—Ç –¥—Ä—É–≥–æ–≥–æ –≤—Ä–∞–≥–∞ (–∏–≥–Ω–æ—Ä–∏—Ä—É–µ–º)")

func take_damage(amount: float):
	if state == State.DEATH or is_dying:
		return
	
	current_health -= amount
	current_health = max(current_health, 0)
	print("üëë –ë–æ—Å—Å HP: ", current_health, "/", max_health)

	if health_bar:
		health_bar.value = current_health

	if current_health <= 0:
		die()
	else:
		state = State.HURT
		anim_player.play("Hurt")
		await anim_player.animation_finished
		if target and target_in_attack_range():
			state = State.ATTACK
		else:
			state = State.CHASE

func die():
	if is_dying:
		return
	
	is_dying = true
	state = State.DEATH
	velocity = Vector2.ZERO
	
	print("üëë –ë–æ—Å—Å —É–º–∏—Ä–∞–µ—Ç!")
	
	# –û—Ç–∫–ª—é—á–∞–µ–º –∫–æ–ª–ª–∏–∑–∏–∏
	set_collision_layer(0)
	set_collision_mask(0)
	
	anim_player.play("Death")
	await anim_player.animation_finished

	# –®–∞–Ω—Å –≤—ã–ø–∞–¥–µ–Ω–∏—è –æ–±—ã—á–Ω–æ–≥–æ –ª—É—Ç–∞ (–º—É—Å–æ—Ä–∞) - 30% –¥–ª—è –±–æ—Å—Å–∞
	if item_drop_scene and randf() <= item_drop_chance:
		var item = item_drop_scene.instantiate()
		if item.has_method("set_enemy_id"):
			item.set_enemy_id(my_unique_id)
		get_parent().add_child(item)
		item.global_position = global_position
		print("üëë –ë–æ—Å—Å: –õ—É—Ç –≤—ã–ø–∞–ª!")
	
	# –®–∞–Ω—Å –≤—ã–ø–∞–¥–µ–Ω–∏—è –∫—Ä–∏—Å—Ç–∞–ª–ª–∞ - 40% –¥–ª—è –±–æ—Å—Å–∞
	if crystal_drop_scene and randf() <= crystal_drop_chance:
		var crystal = crystal_drop_scene.instantiate()
		if crystal.has_method("set_enemy_id"):
			crystal.set_enemy_id(my_unique_id)
		get_parent().add_child(crystal)
		crystal.global_position = global_position
		print("üëë –ë–æ—Å—Å: –ö—Ä–∏—Å—Ç–∞–ª–ª –≤—ã–ø–∞–ª!")

	# –û—Ç–º–µ—á–∞–µ–º –≤—Ä–∞–≥–∞ –∫–∞–∫ —É–±–∏—Ç–æ–≥–æ
	if save_system and my_unique_id != "":
		save_system.mark_enemy_killed(my_unique_id)
	
	# –≠–º–∏—Ç–∏—Ä—É–µ–º —Å–∏–≥–Ω–∞–ª —Å–º–µ—Ä—Ç–∏ –¥–ª—è WaveManager
	get_tree().call_group("wave_manager", "_on_enemy_died")
	
	print("üëë –ë–æ—Å—Å –ø–æ–±–µ–∂–¥–µ–Ω!")
	
	# –£–¥–∞–ª—è–µ–º –≤—Ä–∞–≥–∞
	queue_free()

func play_random_idle():
	var idle_animations = ["Idle", "Idle2"]
	if idle_animations.size() > 0:
		anim_player.play(idle_animations[randi() % idle_animations.size()])

func _on_attack_range_body_entered(body):
	if (body.is_in_group("great_cheese") or body.is_in_group("players")) and target == body:
		state = State.ATTACK
		print("üëë –ë–æ—Å—Å: –¶–µ–ª—å –≤–æ—à–ª–∞ –≤ –∑–æ–Ω—É –∞—Ç–∞–∫–∏")

func _on_attack_range_body_exited(body):
	if (body.is_in_group("great_cheese") or body.is_in_group("players")) and state != State.HURT:
		state = State.CHASE
		print("üëë –ë–æ—Å—Å: –¶–µ–ª—å –≤—ã—à–ª–∞ –∏–∑ –∑–æ–Ω—ã –∞—Ç–∞–∫–∏")

func _on_player_detection_area_body_entered(body):
	if body.is_in_group("players"):
		print("üëë –ë–æ—Å—Å: –û–±–Ω–∞—Ä—É–∂–µ–Ω –∏–≥—Ä–æ–∫ –≤ –∑–æ–Ω–µ!")
		if not is_distracted_by_player:
			print("üëë –ë–æ—Å—Å: –û—Ç–≤–ª–µ–∫–∞—é—Å—å –Ω–∞ –∏–≥—Ä–æ–∫–∞!")
			target = body
			is_distracted_by_player = true
			distraction_cooldown = 10.0

func _on_player_detection_area_body_exited(body):
	if body.is_in_group("players") and is_distracted_by_player:
		print("üëë –ë–æ—Å—Å: –ò–≥—Ä–æ–∫ –≤—ã—à–µ–ª –∏–∑ –∑–æ–Ω—ã –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏—è")
		distraction_cooldown = 3.0

func stop_moving():
	state = State.IDLE
	velocity = Vector2.ZERO
	if anim_player:
		anim_player.play("Idle")
